Refactoring -> remove abstract class and implement correct decoding/encoding
Signed-off-by: Gabriel Trintinalia <gabriel.trintinalia@gmail.com>